Update author page
Signed-off-by: Md Mohin Uddin <mohin@appscode.com>

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -38,7 +38,7 @@
                   alt="author-image"></a>
               <div class="information">
                 <h5><a href="/authors/{{ $author | urlize }}">{{ $author }}</a></h5>
-                <p class="designation">Senior Software Engineer</p>
+                <p class="designation">Designation</p>
                 <a href="appscode.com" class="company">AppsCode Inc</a>
               </div>
               {{end}}
