--- a/layouts/author/list.html
+++ b/layouts/author/list.html
@@ -12,6 +12,9 @@
           </figure>
           <h4 class="has-text-white mb-8" data-aos="fade-up" data-aos-duration="600">{{ $author.name }}</h4>
           <p class="has-text-white mb-16" data-aos="fade-up" data-aos-duration="800">
+            ( {{ $author.designation }} )
+          </p>
+          <p class="has-text-white mb-16" data-aos="fade-up" data-aos-duration="800">
             {{ $author.biography }}
           </p>
           <div class="social-share">
