--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -83,12 +83,12 @@
       </div>
       <div class="column is-8">
         <!-- blog large image start -->
-        <figure class="fig-style mb-20">
+        <!-- <figure class="fig-style mb-20">
           {{ $original := .Resources.GetMatch "hero.jpg" }}
           {{ $cropped := $original.Fill "1300x650" }}
           <img src="{{ $cropped.RelPermalink }}" alt="{{ .Title }}">
           </a>
-        </figure>
+        </figure> -->
         <!-- blog large image end -->
 
 
