--- a/static/assets/sass/main.css
+++ b/static/assets/sass/main.css
@@ -10450,7 +10450,7 @@ Responsive Classes
   font-weight: 400;
   font-size: 20px;
   line-height: 160%;
-  color: #fdfdfd;
+  color: #dbdbdb;
   margin-bottom: 40px;
   width: 95%;
 }
@@ -10755,6 +10755,10 @@ ul.social-share-button li {
           justify-content: center;
   border-radius: 50%;
   margin-right: 1rem;
+}
+
+ul.social-share-button li:last-child {
+  margin-right: 0;
 }
 
 ul.social-share-button li a {
