Update input accent color
Signed-off-by: Md Mohin Uddin <mohin@appscode.com>

--- a/static/assets/sass/layouts/_blog-page.scss
+++ b/static/assets/sass/layouts/_blog-page.scss
@@ -551,6 +551,9 @@ ul.social-share-button {
           user-select: none;
           cursor: pointer;
         }
+        input {
+          accent-color: $ac-primary;
+        }
       }
     }
   }
