--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -33,7 +33,7 @@
                   <a href="/authors/{{ $author | urlize }}" class="author-image"><img
                       src="/assets/images/authors/profile-photos-84x84/{{ $author | urlize}}.jpg" alt="author-image"></a>
                   <div class="information">
-                    <h5><a href="/authors/{{ $author | urlize }}">{{ $author }}</a></h5>
+                    <a href="/authors/{{ $author | urlize }}" class="author-name">{{ $author }}</a>
                     <p class="designation">Senior Software Engineer</p>
                     <a href="appscode.com" class="company">AppsCode Inc</a>
                   </div>
