--- a/layouts/author/list.html
+++ b/layouts/author/list.html
@@ -162,13 +162,6 @@
 
               <!-- single ac-checkbox start  -->
               <div class="ac-single-checkbox">
-                <input class="is-checkradio ac-checkbox" id="alert" type="checkbox" name="checkbox" />
-                <label for="alert">Alert</label>
-              </div>
-              <!-- single ac-checkbox end -->
-
-              <!-- single ac-checkbox start  -->
-              <div class="ac-single-checkbox">
                 <input class="is-checkradio ac-checkbox" id="backup" type="checkbox" name="checkbox" />
                 <label for="backup">Backup</label>
               </div>
@@ -248,7 +241,7 @@
 
                     <img src="/assets/images/authors/profile-photos-28x28/{{ $author | urlize}}.jpg" alt="author"
                       width="20" height="20" loading="lazy" decoding="async">
-                    <h6 class="mr-12"> {{ $author }}</h6>
+                    <p class="mr-12 author"> {{ $author }}</p>
 
                   </div>
                   {{end}}</div>
