Update author photos
Signed-off-by: Md Mohin Uddin <mohin@appscode.com>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -22,6 +22,8 @@
     gtag('config', 'G-R5J3WVDEFB');
   </script>
   <meta charset="UTF-8" />
+  <meta name="description"
+    content="AppsCode's latest news and announcements, tips and tricks for our cloud-native ecosystem and products such as KubeDB, Stash, Voyager, ByteBuilders, KubeVault, and many more.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="theme-color" content="#0071BD" />
