--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -20,7 +20,7 @@
               <!-- title  -->
 
               <!-- summary  -->
-              <p class="is-ellipsis-2" data-aos="fade-up" data-aos-duration="700">{{ $p.Summary }}</p>
+              <p class="is-ellipsis-2 has-text-light" data-aos="fade-up" data-aos-duration="700">{{ $p.Summary }}</p>
 
               <a class="button ac-button is-secondary" href="{{ $p.RelPermalink }}" data-aos="fade-up"
                 data-aos-duration="800">CONTINUE READING</a>
@@ -38,8 +38,8 @@
                   alt="author-image"></a>
               <div class="information">
                 <a href="/authors/{{ $author | urlize }}" class="author-name">{{ $author }}</a>
-                <p class="designation">Designation</p>
-                <a href="appscode.com" class="company">AppsCode Inc</a>
+                <p class="designation has-text-light">Designation</p>
+                <a href="appscode.com" class="company has-text-light">AppsCode Inc</a>
               </div>
               {{end}}
             </div>
