--- a/layouts/author/list.html
+++ b/layouts/author/list.html
@@ -10,11 +10,8 @@
           <figure class="image width-80">
             <img src="{{ $author.profile }}" loading="lazy" class="is-rounded" decoding="async" />
           </figure>
-          <h4 class="has-text-white mb-8" data-aos="fade-up" data-aos-duration="600">{{ $author.name }}</h4>
-          <p class="has-text-white mb-16" data-aos="fade-up" data-aos-duration="800">
-            ( {{ $author.designation }} )
-          </p>
-          <p class="has-text-white mb-16" data-aos="fade-up" data-aos-duration="800">
+          <h4 class="has-text-light mb-8" data-aos="fade-up" data-aos-duration="600">{{ $author.name }}</h4>
+          <p class="has-text-light mb-16" data-aos="fade-up" data-aos-duration="800">
             {{ $author.biography }}
           </p>
           <div class="social-share">
