--- a/static/assets/sass/layouts/_blog-page.scss
+++ b/static/assets/sass/layouts/_blog-page.scss
@@ -82,7 +82,7 @@
     width: 80px;
     height: 80px;
     margin-right: 16px;
-    border: 2px solid rgba(255, 255, 255, 0.1);
+    border: 2px solid #fafbfc;
     overflow: hidden;
 
     // img {
