--- a/static/assets/sass/main.css
+++ b/static/assets/sass/main.css
@@ -10499,7 +10499,7 @@ Responsive Classes
   width: 80px;
   height: 80px;
   margin-right: 16px;
-  border: 2px solid rgba(255, 255, 255, 0.1);
+  border: 2px solid #fafbfc;
   overflow: hidden;
 }
 
