Fix m1 laptop responsive issues
Signed-off-by: mohin7 <csemohin@gmail.com>

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -29,22 +29,24 @@
           </div>
 
           <div class="column is-4">
-            <!-- author start  -->
-            {{ range $author := $p.Params.authors }}
-            <div class="author">
-              {{ range $author := first 1 $p.Params.authors }}
-              <a href="/authors/{{ $author | urlize }}" class="author-image"><img
-                  src="/assets/images/authors/profile-photos-84x84/{{ $author | urlize}}.jpg"
-                  alt="author-image" height="76" width="76"></a>
-              <div class="information">
-                <a href="/authors/{{ $author | urlize }}" class="author-name">{{ $author }}</a>
-                <p class="designation has-text-light">Designation</p>
-                <a href="appscode.com" class="company has-text-light">AppsCode Inc</a>
-              </div>
-              {{end}}
-            </div>
-            {{ end }}
-            <!-- author end -->
+           <div class="is-flex">
+             <!-- author start  -->
+             {{ range $author := $p.Params.authors }}
+             <div class="author">
+               {{ range $author := first 1 $p.Params.authors }}
+               <a href="/authors/{{ $author | urlize }}" class="author-image"><img
+                   src="/assets/images/authors/profile-photos-84x84/{{ $author | urlize}}.jpg"
+                   alt="author-image" height="76" width="76"></a>
+               <div class="information">
+                 <a href="/authors/{{ $author | urlize }}" class="author-name">{{ $author }}</a>
+                 <p class="designation has-text-light">Designation</p>
+                 <a href="appscode.com" class="company has-text-light">AppsCode Inc</a>
+               </div>
+               {{end}}
+             </div>
+             {{ end }}
+             <!-- author end -->
+           </div>
           </div>
         </div>
       </div>
