Update hero-area spacing
Signed-off-by: mohin7 <csemohin@gmail.com>

--- a/static/assets/sass/layouts/_blog-page.scss
+++ b/static/assets/sass/layouts/_blog-page.scss
@@ -1161,6 +1161,7 @@ ul.social-share-button {
 
 @media (min-width: 1408px) and (max-width: 1600px) {
   .hero-area-blog {
+    padding: 150px 0 80px;
     .blog-title-content {
       h1 {
         font-size: 32px;
