--- a/static/assets/sass/layouts/_blog-details.scss
+++ b/static/assets/sass/layouts/_blog-details.scss
@@ -173,7 +173,8 @@
   }
   p {
     font-size: 16px;
-    text-align: justify;
+    // text-align: justify;
+    font-size: 18px;
     margin-bottom: 20px;
     line-height: 190%;
     a {
@@ -207,7 +208,7 @@
     border-radius: 4px;
     background-color: #1c2c41;
     color: #fff;
-    font-size: 14px;
+    font-size: 16px;
     line-height: 22px;
   }
   figure {
@@ -226,7 +227,7 @@
     padding-left: 20px;
     margin-bottom: 30px;
     li {
-      font-size: 16px;
+      font-size: 18px;
       list-style: disc;
       margin-bottom: 15px;
       &:last-child {
@@ -236,7 +237,7 @@
         border-radius: 2px;
       }
       pre {
-        font-size: 14px;
+        font-size: 16px;
         margin-left: -20px;
       }
     }
@@ -245,7 +246,7 @@
     padding-left: 20px;
     margin-bottom: 30px;
     li {
-      font-size: 16px;
+      font-size: 18px;
       margin-bottom: 15px;
       &:last-child {
         margin-bottom: 0;
@@ -259,7 +260,7 @@
     padding-left: 20px;
     margin-bottom: 30px;
     li {
-      font-size: 16px;
+      font-size: 18px;
       margin-bottom: 15px;
       &:last-child {
         margin-bottom: 0;
