--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -26,7 +26,7 @@
 
           <div class="column is-5">
             <!-- is-justify-content-flex-end  -->
-              <div class="is-flex ml-20">
+              <div class="is-flex">
                 <!-- author start  -->
                 {{ range $author := .Params.authors }}
                 <div class="author ml-10">
