--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -26,10 +26,10 @@
 
           <div class="column is-5">
             <!-- is-justify-content-flex-end  -->
-              <div class="is-flex">
+              <div class="is-flex authors">
                 <!-- author start  -->
                 {{ range $author := .Params.authors }}
-                <div class="author ml-10">
+                <div class="author">
                   <a href="/authors/{{ $author | urlize }}" class="author-image"><img
                       src="/assets/images/authors/profile-photos-84x84/{{ $author | urlize}}.jpg" alt="author-image"></a>
                   <div class="information">
