--- a/static/assets/sass/layouts/_blog-page.scss
+++ b/static/assets/sass/layouts/_blog-page.scss
@@ -171,7 +171,7 @@ a.inline-button {
 .single-blog-card {
   background-color: #fff;
   display: block;
-  height: 170px;
+  min-height: 185px;
   padding: 32px 16px;
   transition: 0.3s ease-in-out;
 
@@ -793,6 +793,17 @@ ul.social-share-button {
                                     Responsive code start
 =================================================================================================*/
 
+@media (max-width: 480px) {
+  .authors {
+    flex-direction: column;
+
+    .author {
+      margin-left: 0;
+      margin-bottom: 10px;
+    }
+  }
+}
+
 // Extra small devices (portrait phones, less than 768px)
 @media (max-width: 768px) {
   .hero-area-blog {
@@ -829,6 +840,7 @@ ul.social-share-button {
       border-right: none;
       padding-right: 15px;
       border-bottom: 1px solid $ac-white-light;
+
       .collapsable-menu {
         &:last-child {
           margin-bottom: 0;
@@ -845,6 +857,8 @@ ul.social-share-button {
 // Medium devices (tablets, 769px and up)
 @media (min-width: 769px) and (max-width: 1023.98px) {
   .hero-area-blog {
+    padding: 120px 0 60px;
+
     .blog-title-content {
       padding-left: 20px;
 
@@ -869,34 +883,31 @@ ul.social-share-button {
         }
       }
     }
+
+    .authors {
+      flex-direction: row !important;
+      .author {
+        flex-direction: column !important;
+        margin-left: 20px !important;
+        margin-bottom: 0 !important;
+        a {
+          margin-bottom: 8px;
+        }
+        p.designation {
+          margin-bottom: 0;
+        }
+      }
+    }
   }
 
-  .search-filter-area {
-    top: 50px;
-
-    .filter-wrapper {
-      padding: 6px 12px;
-
-      .search-area {
-        .fa {
-          font-size: 18px;
-          margin-right: 0.75rem;
-        }
-      }
-    }
-
-    .filter-area {
-      .viewing-mode {
-        button {
-          margin-right: 0.5rem;
-        }
-      }
-    }
+  .single-blog-card {
+    padding: 12px 16px;
   }
 
   .blog-items-area {
     .left-sidebar {
-      top: 120px;
+      top: 60px;
+      margin-right: 0;
     }
   }
 
@@ -942,49 +953,53 @@ ul.social-share-button {
     }
   }
 
-  .blog-items {
-    .blog-title-content {
-      h2 {
-        font-size: 18px;
-        letter-spacing: -0.2px;
-        font-weight: 500;
-        margin-bottom: 10px;
-      }
+  // .blog-items {
+  //   .blog-title-content {
+  //     h2 {
+  //       font-size: 18px;
+  //       letter-spacing: -0.2px;
+  //       font-weight: 500;
+  //       margin-bottom: 10px;
+  //     }
 
-      .meta {
-        margin-bottom: 10px;
+  //     .meta {
+  //       margin-bottom: 10px;
 
-        i.fa {
-          font-size: 13px;
-          margin-right: 0.2rem;
-        }
+  //       i.fa {
+  //         font-size: 13px;
+  //         margin-right: 0.2rem;
+  //       }
 
-        .author {
-          margin-right: 15px;
+  //       .author {
+  //         margin-right: 15px;
 
-          a {
-            font-size: 13px;
-          }
-        }
+  //         a {
+  //           font-size: 13px;
+  //         }
+  //       }
 
-        .date {
-          strong {
-            font-size: 13px;
-          }
-        }
+  //       .date {
+  //         strong {
+  //           font-size: 13px;
+  //         }
+  //       }
 
-        a.inline-button {
-          font-size: 12px;
-          letter-spacing: 1px;
-        }
-      }
-    }
-  }
+  //       a.inline-button {
+  //         font-size: 12px;
+  //         letter-spacing: 1px;
+  //       }
+  //     }
+  //   }
+  // }
+}
+
+@media (min-width: 850px) and (max-width: 1023px) {
 }
 
 // Large devices (desktops, 1024px and up)
 @media (min-width: 1024px) and (max-width: 1407px) {
   .hero-area-blog {
+    padding: 120px 0 60px;
     .blog-title-content {
       padding-left: 20px;
 
@@ -1001,42 +1016,34 @@ ul.social-share-button {
         margin-bottom: 24px;
       }
 
-      .social-share {
-        margin-top: 20px;
+      // .social-share {
+      //   margin-top: 20px;
 
-        label {
-          margin-bottom: 10px;
+      //   label {
+      //     margin-bottom: 10px;
+      //   }
+      // }
+    }
+    .authors {
+      flex-direction: row !important;
+      .author {
+        a {
+          margin-bottom: 8px;
         }
+        flex-direction: column !important;
+        margin-left: 20px !important;
+        margin-bottom: 0 !important;
       }
     }
   }
 
   .search-filter-area {
     top: 60px;
-
-    .filter-wrapper {
-      padding: 6px 12px;
-
-      .search-area {
-        .fa {
-          font-size: 18px;
-          margin-right: 0.75rem;
-        }
-      }
-    }
-
-    .filter-area {
-      .viewing-mode {
-        button {
-          margin-right: 0.5rem;
-        }
-      }
-    }
   }
 
   .blog-items-area {
     .left-sidebar {
-      top: 120px;
+      top: 6px;
     }
   }
 
