--- a/static/assets/sass/main.css
+++ b/static/assets/sass/main.css
@@ -10556,7 +10556,7 @@ a.inline-button i.fa {
 .single-blog-card {
   background-color: #fff;
   display: block;
-  height: 170px;
+  min-height: 185px;
   padding: 32px 16px;
   -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
@@ -11224,6 +11224,19 @@ ul.social-share-button li a i.fa {
 /*=================================================================================================
                                     Responsive code start
 =================================================================================================*/
+@media (max-width: 480px) {
+  .authors {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .authors .author {
+    margin-left: 0;
+    margin-bottom: 10px;
+  }
+}
+
 @media (max-width: 768px) {
   .hero-area-blog {
     padding: 100px 0 50px;
@@ -11257,6 +11270,9 @@ ul.social-share-button li a i.fa {
 }
 
 @media (min-width: 769px) and (max-width: 1023.98px) {
+  .hero-area-blog {
+    padding: 120px 0 60px;
+  }
   .hero-area-blog .blog-title-content {
     padding-left: 20px;
   }
@@ -11276,21 +11292,32 @@ ul.social-share-button li a i.fa {
   .hero-area-blog .blog-title-content .social-share label {
     margin-bottom: 10px;
   }
-  .search-filter-area {
-    top: 50px;
+  .hero-area-blog .authors {
+    -webkit-box-orient: horizontal !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: row !important;
+            flex-direction: row !important;
   }
-  .search-filter-area .filter-wrapper {
-    padding: 6px 12px;
+  .hero-area-blog .authors .author {
+    -webkit-box-orient: vertical !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: column !important;
+            flex-direction: column !important;
+    margin-left: 20px !important;
+    margin-bottom: 0 !important;
   }
-  .search-filter-area .filter-wrapper .search-area .fa {
-    font-size: 18px;
-    margin-right: 0.75rem;
+  .hero-area-blog .authors .author a {
+    margin-bottom: 8px;
   }
-  .search-filter-area .filter-area .viewing-mode button {
-    margin-right: 0.5rem;
+  .hero-area-blog .authors .author p.designation {
+    margin-bottom: 0;
+  }
+  .single-blog-card {
+    padding: 12px 16px;
   }
   .blog-items-area .left-sidebar {
-    top: 120px;
+    top: 60px;
+    margin-right: 0;
   }
   .single-blog {
     min-height: 360px;
@@ -11321,35 +11348,12 @@ ul.social-share-button li a i.fa {
     font-size: 16px;
     margin-bottom: 10px;
   }
-  .blog-items .blog-title-content h2 {
-    font-size: 18px;
-    letter-spacing: -0.2px;
-    font-weight: 500;
-    margin-bottom: 10px;
-  }
-  .blog-items .blog-title-content .meta {
-    margin-bottom: 10px;
-  }
-  .blog-items .blog-title-content .meta i.fa {
-    font-size: 13px;
-    margin-right: 0.2rem;
-  }
-  .blog-items .blog-title-content .meta .author {
-    margin-right: 15px;
-  }
-  .blog-items .blog-title-content .meta .author a {
-    font-size: 13px;
-  }
-  .blog-items .blog-title-content .meta .date strong {
-    font-size: 13px;
-  }
-  .blog-items .blog-title-content .meta a.inline-button {
-    font-size: 12px;
-    letter-spacing: 1px;
-  }
 }
 
 @media (min-width: 1024px) and (max-width: 1407px) {
+  .hero-area-blog {
+    padding: 120px 0 60px;
+  }
   .hero-area-blog .blog-title-content {
     padding-left: 20px;
   }
@@ -11363,27 +11367,28 @@ ul.social-share-button li a i.fa {
   .hero-area-blog .blog-title-content p {
     margin-bottom: 24px;
   }
-  .hero-area-blog .blog-title-content .social-share {
-    margin-top: 20px;
+  .hero-area-blog .authors {
+    -webkit-box-orient: horizontal !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: row !important;
+            flex-direction: row !important;
   }
-  .hero-area-blog .blog-title-content .social-share label {
-    margin-bottom: 10px;
+  .hero-area-blog .authors .author {
+    -webkit-box-orient: vertical !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: column !important;
+            flex-direction: column !important;
+    margin-left: 20px !important;
+    margin-bottom: 0 !important;
+  }
+  .hero-area-blog .authors .author a {
+    margin-bottom: 8px;
   }
   .search-filter-area {
     top: 60px;
   }
-  .search-filter-area .filter-wrapper {
-    padding: 6px 12px;
-  }
-  .search-filter-area .filter-wrapper .search-area .fa {
-    font-size: 18px;
-    margin-right: 0.75rem;
-  }
-  .search-filter-area .filter-area .viewing-mode button {
-    margin-right: 0.5rem;
-  }
   .blog-items-area .left-sidebar {
-    top: 120px;
+    top: 6px;
   }
   .single-blog {
     min-height: 360px;
@@ -11545,7 +11550,7 @@ ul.social-share-button li a i.fa {
   position: -webkit-sticky;
   position: sticky;
   top: 30px;
-  z-index: 99;
+  z-index: 9;
 }
 
 .single-wizard h4 {
@@ -11964,8 +11969,7 @@ ul.social-share-button li a i.fa {
     font-size: 16px;
   }
   .blog-content p {
-    font-size: 14px;
-    text-align: justify;
+    font-size: 16px;
     margin-bottom: 20px;
     line-height: 1.6;
   }
@@ -11973,11 +11977,15 @@ ul.social-share-button li a i.fa {
     width: 300px !important;
     height: 200px !important;
   }
+  .blog-content ol li,
+  .blog-content ul li {
+    font-size: 16px;
+  }
 }
 
 @media (min-width: 769px) and (max-width: 1023.98px) {
   .blog-details-area {
-    margin-top: 80px;
+    margin-top: 40px;
   }
   .blog-details-area h1 {
     font-size: 32px;
@@ -12117,6 +12125,20 @@ ul.social-share-button li a i.fa {
 /*=================================================================================================
                                     Responsive code start
 =================================================================================================*/
+@media (max-width: 768px) {
+  .author-page .single-blog-card {
+    min-height: auto;
+    padding: 24px 16px;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1023.98px) {
+  .author-page .single-blog-card {
+    min-height: auto;
+    padding: 24px 16px;
+  }
+}
+
 @media (min-width: 1408px) and (max-width: 1600px) {
   .author-hero-area {
     padding: 100px 0 20px;
